# flywave-vdb

./: .gitignore  CMakeLists.txt  README.md  atlas.go  bbox.go  bbox_test.go  border_lock.go  builder.go  builder_test.go  clip.go  ellipsoid.go  feature.go  filter_triangle.go  go.mod  go.sum  grid.cc  grid.go  grid.hh  grid_api_impl.hh  grid_transform.go  lrucache.go  mask.go  material.go  mesh.go  mesh.hh  operator.go  options.go  particle.hh  quadtree_path.go  ray.go  renderer.go  repacker.go  sampler.go  scene.go  space.go  storage.go  texture.go  texture_data.go  texture_mesh.go  textute_foundry.go  (+16 more)
coord/: box.go  coord.go
src/: CMakeLists.txt  barycentric.cc  barycentric.hh  bbox.hh  color_extract.hh  denoiser.cc  denoiser.hh  feature_data.cc  feature_data.hh  feature_meta_data.cc  feature_meta_data.hh  float_grid.cc  float_grid.hh  foundry.cc  foundry.hh  grid.cc  grid.hh  grid_api.cc  grid_api.h  grid_api_impl.hh  index.hh  io_jpeg.cc  io_jpeg.hh  io_png.cc  io_png.hh  mapping.cc  mapping.hh  material_data.cc  material_data.hh  material_meta_data.cc  material_meta_data.hh  mesh.cc  mesh_adapter.cc  mesh_adapter.hh  mesh_data.cc  mesh_data.hh  micronizer.cc  micronizer.hh  particle.hh  pbr_renderer.cc  (+61 more)
src/voxelize/: CMakeLists.txt  barycentric.cc  barycentric.hh  base_texture.hh  bbox.hh  color_extract.hh  feature_manager.cc  feature_manager.hh  foundry.cc  foundry.hh  index.hh  mesh.cc  mesh_adapter.hh  micronizer.cc  micronizer.hh  pixel.hh  plan.hh  pquery.hh  projection.hh  rasterize.hh  ray.hh  resolution.hh  sampler.cc  sampler.hh  st_policy.hh  texture2d.cc  texture2d.hh  tolerance.hh  trees.hh  triangle.hh  types.hh  vdb_type.hh  voxel_pot.cc  voxel_pot.hh  xparam.hh  zero.hh
