
include_directories(${FLYWAVE_INCLUDE_DIRS})

set(vdb_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/grid.cc ${CMAKE_CURRENT_SOURCE_DIR}/mesh.cc ${CMAKE_CURRENT_SOURCE_DIR}/vdb_api.cc)
set(vdb_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/grid_api_impl.hh ${CMAKE_CURRENT_SOURCE_DIR}/grid.hh ${CMAKE_CURRENT_SOURCE_DIR}/mesh.hh ${CMAKE_CURRENT_SOURCE_DIR}/particle.hh ${CMAKE_CURRENT_SOURCE_DIR}/vdb_api.h)

ADD_LIBRARY(vdb STATIC
            ${vdb_HEADER_FILES}
            ${vdb_SOURCE_FILES}
          )

TARGET_INCLUDE_DIRECTORIES(vdb PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>)

SOURCE_GROUP("src" FILES ${vdb_SOURCE_FILES})
SOURCE_GROUP("include" FILES ${vdb_HEADER_FILES})

SET_TARGET_PROPERTIES(vdb
                    PROPERTIES PUBLIC_HEADER "${headers}")
