
include_directories(${FLYWAVE_INCLUDE_DIRS})

if (MSVC)
    add_definitions(-DCONSTEXPR=const -DNOMINMAX -D_CRT_SECURE_NO_WARNINGS)
else()
    add_definitions(-DCONSTEXPR=constexpr)
endif()

FILE( GLOB vdb_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cc )
FILE( GLOB vdb_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.hh ${CMAKE_CURRENT_SOURCE_DIR}/*.h )

ADD_LIBRARY(vdb STATIC
            ${vdb_HEADER_FILES}
            ${vdb_SOURCE_FILES}
          )

TARGET_INCLUDE_DIRECTORIES(vdb PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>)

SOURCE_GROUP("src" FILES ${vdb_SOURCE_FILES})
SOURCE_GROUP("include" FILES ${vdb_HEADER_FILES})

SET_TARGET_PROPERTIES(vdb
                    PROPERTIES PUBLIC_HEADER "${headers}")
